nbproject/private/Default-build.log
g++  -c main.cpp -o o/main.o -DSFML_STATIC
main.cpp:9:10: error: empty filename in #include
 #include <>
          ^
make.exe": *** [o/main.o] Error 1
